--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pdfplumber==0.10.3
+pdfplumber==0.11.7
 requests==2.31.0
-supabase==2.3.0
-schedule==1.2.0
-selenium==4.15.0
-beautifulsoup4==4.12.2
-python-dotenv==1.0.0
+supabase==2.9.0
+schedule==1.2.2
+selenium==4.36.0
+beautifulsoup4==4.14.2
+python-dotenv==1.0.1
+lxml==5.1.0
