--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 pdfplumber==0.10.3
 requests==2.31.0
 schedule==1.2.2
-selenium==4.15.0
+beautifulsoup4==4.12.2
 python-dotenv==1.0.1
+lxml==5.1.0
+html5lib==1.1
